style: fixed spacing for all student mgt pages

--- a/components/studentPage/Display.module.css
+++ b/components/studentPage/Display.module.css
@@ -98,38 +98,38 @@
 }
 
 .titleCol1 {
-  width: 20%;
+  width: 19%;
   margin-left: 2rem;
   font-size: large;
 }
 
 .titleCol2 {
-  width: 10%;
+  width: 14%;
   font-size: large;
 }
 
 .titleCol3 {
-  width: 10%;
+  width: 11%;
   font-size: large;
 }
 
 .titleCol4 {
-  width: 10%;
+  width: 15%;
   font-size: large;
 }
 
 .titleCol5 {
-  width: 15%;
+  width: 14%;
   font-size: large;
 }
 
 .titleCol6 {
-  width: 18%;
+  width: 16%;
   font-size: large;
 }
 
 .titleCol7 {
-  width: 15%;
+  width: 20%;
   font-size: large;
 }
   
